update some decoration variables to make a little more sense; document vertical alignment and inline block; use vertical align middle as default for buttons, with minor vertical rhythm effects. Fixes #31 and fixes #32.

--- a/app/assets/stylesheets/modules/_buttons.css.scss
+++ b/app/assets/stylesheets/modules/_buttons.css.scss
@@ -212,7 +212,7 @@ category: modules
   display: inline-block;
   font-weight: $btn-font-weight;
   text-align: center;
-  vertical-align: top;
+  vertical-align: middle;
   background-color: $btn-bg-default;
              color: $btn-color-default;
   border-style: solid;
@@ -221,6 +221,10 @@ category: modules
   box-sizing: border-box;
   cursor: pointer;
   @extend %f-md;
+
+  &:not([class^="vertical"]):not([class*="vertical"]) {
+    vertical-align: middle;
+  }
 
   @if $btn-border-option { border-width: $btn-border-width; }
 
